New feature extractors - length-based broken

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,19 +165,19 @@
        "    <tr>\n",
        "      <th>1.0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>\\nSave up to 70% on Life Insurance.\\nWhy Spend...</td>\n",
+       "      <td>\\r\\nSave up to 70% on Life Insurance.\\r\\nWhy S...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2.0</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>1) Fight The Risk of Cancer!\\nhttp://www.adcli...</td>\n",
+       "      <td>1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.0</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1) Fight The Risk of Cancer!\\nhttp://www.adcli...</td>\n",
+       "      <td>1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -189,7 +189,7 @@
        "    <tr>\n",
        "      <th>5.0</th>\n",
        "      <td>4.0</td>\n",
-       "      <td>I thought you might like these:\\n1) Slim Down ...</td>\n",
+       "      <td>I thought you might like these:\\r\\n1) Slim Dow...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -198,11 +198,11 @@
       ],
       "text/plain": [
        "      id                                               Body Label\n",
-       "1.0  0.0  \\nSave up to 70% on Life Insurance.\\nWhy Spend...     1\n",
-       "2.0  1.0  1) Fight The Risk of Cancer!\\nhttp://www.adcli...     1\n",
-       "3.0  2.0  1) Fight The Risk of Cancer!\\nhttp://www.adcli...     1\n",
+       "1.0  0.0  \\r\\nSave up to 70% on Life Insurance.\\r\\nWhy S...     1\n",
+       "2.0  1.0  1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...     1\n",
+       "3.0  2.0  1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...     1\n",
        "4.0  3.0  ##############################################...     1\n",
-       "5.0  4.0  I thought you might like these:\\n1) Slim Down ...     1"
+       "5.0  4.0  I thought you might like these:\\r\\n1) Slim Dow...     1"
       ]
      },
      "execution_count": 9,
@@ -258,16 +258,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\theco\\AppData\\Roaming\\Python\\Python310\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#spacy imports\n",
     "import spacy\n",
@@ -348,6 +339,8 @@
     "            phrase = phrase.lower()\n",
     "        if \"newlines\" in self.preprocessing:\n",
     "            phrase = \" \".join(filter(None, phrase.split(\"\\n\")))\n",
+    "        if \"returns\" in self.preprocessing:\n",
+    "            phrase = \" \".join(filter(None, phrase.split(\"\\r\")))\n",
     "        if \"punc\" in self.preprocessing:\n",
     "            #remove punctuation\n",
     "            phrase = phrase.translate(str.maketrans('','',string.punctuation))\n",
@@ -380,6 +373,8 @@
     "        negation_words = [\"neither\", \"never\", \"no\", \"nobody\", \"none\", \"noone\", \"nor\", \"not\", \"nothing\", \"nowhere\"]\n",
     "\n",
     "        intensifer_words = [\"absolutely\", \"completely\", \"extremely\", \"highly\", \"rather\", \"really\", \"so\", \"too\", \"totally\", \"utterly\", \"very\"]\n",
+    "\n",
+    "        #TODO: add words for authority, bank accounts, urgency, click here, ...\n",
     "\n",
     "        #use if len(self.feature_selection) > 1 to check if any preprocessing already occurred, as input will be in a list\n",
     "\n",
@@ -492,6 +487,13 @@
     "                        phrase.append(split[i] + \" \" + split[i+1])\n",
     "                    else:\n",
     "                        phrase.append(split[i])\n",
+    "        if \"remove_short_tokens\" in self.feature_selection:\n",
+    "            #remove tokens with < 3 characters\n",
+    "            if isinstance(phrase, list):\n",
+    "                phrase =  list(itertools.chain.from_iterable([partial_phrase for partial_phrase in phrase if len(partial_phrase) > 2]))\n",
+    "            else:\n",
+    "                split = phrase.split(\" \")\n",
+    "                phrase = [partial_phrase for partial_phrase in split if len(partial_phrase) > 2]\n",
     "\n",
     "        if self.retList:\n",
     "            return phrase\n",
@@ -520,6 +522,26 @@
     "#instantiate a new dataset\n",
     "#run the preprocessing with lowercasing, removing newlines, stemming, and tokenisation using the nltk regex\n",
     "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_tokenize\"], retList=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18651"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(d.pp_df)"
    ]
   },
   {
@@ -587,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,14 +642,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save_pickle(d.pos_word_counter, 'd-pos.pickle')\n",
-    "# save_pickle(d.neg_word_counter, 'd-neg.pickle')\n",
-    "# save_pickle(d2.pos_word_counter, 'd-pos.pickle')\n",
-    "# save_pickle(d2.neg_word_counter, 'd-neg.pickle')"
+    "save_pickle(d.pos_word_counter, 'd-pos.pickle')\n",
+    "save_pickle(d.neg_word_counter, 'd-neg.pickle')\n",
+    "save_pickle(d2.pos_word_counter, 'd2-pos.pickle')\n",
+    "save_pickle(d2.neg_word_counter, 'd2-neg.pickle')"
    ]
   },
   {
@@ -640,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,6 +670,74 @@
     "d1_neg_counts = load_pickle('d-neg.pickle')\n",
     "d2_pos_counts = load_pickle('d2-pos.pickle')\n",
     "d2_neg_counts = load_pickle('d2-neg.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\r save up to 70% on life insurance.\\r why spend more than you have to?life quote savings\\r ensuring your \\r       family's financial security is very important. life quote savings makes \\r       buying life insurance simple and affordable. we provide free access to the \\r       very best companies and the lowest rates.life quote savings is fast, easy and \\r             saves you money! let us help you get started with the best values in \\r             the country on new coverage. you can save hundreds or even thousands \\r             of dollars by requesting a free quote from lifequote savings. our \\r             service will take you less than 5 minutes to complete. shop and \\r             compare. save up to 70% on all types of life insurance! click here for your \\r             free quote!protecting your family is the best investment you'll ever \\r           make!\\r if you are in receipt of this email \\r       in error and/or wish to be removed from our list, please click here and type remove. if you \\r       reside in any state which prohibits e-mail solicitations for insurance, \\r       please disregard this \\r       email.\\r\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2.preprocessed_phrases[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'save 70 life insurance spend life quote savings ensuring family financial security important life quote savings makes buying life insurance simple affordable provide free access best companies lowest rates life quote savings fast easy saves money let us help get started best values country new coverage save hundreds even thousands dollars requesting free quote lifequote savings service take less 5 minutes complete shop compare save 70 types life insurance click free quote protecting family best investment ever make receipt email error wish removed list please click type remove reside state prohibits e mail solicitations insurance please disregard email'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2.features[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d3 = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\",\"returns\"], feature_selection=[\"nltk_tokenize\", \"nltk_stoplist\", \"remove_short_tokens\"], retList=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_dataset(d3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_pickle(d3.pos_word_counter, 'd3-pos.pickle')\n",
+    "save_pickle(d3.neg_word_counter, 'd3-neg.pickle')"
    ]
   },
   {
@@ -664,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,24 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('the', 57403), ('_', 52195), ('to', 46435), ('and', 38993), ('of', 34897)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(d1_pos_counts.most_common(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +782,7 @@
      "text": [
       "5 most common tokens in dfSpam (with stopwords) - Spam emails:\n",
       "\n",
-      "\"the\" (57403), \"_\" (52195), \"to\" (46435), \"and\" (38993), \"of\" (34897)\n"
+      "\"the\" (57407), \"_\" (52195), \"to\" (46435), \"and\" (38993), \"of\" (34897)\n"
      ]
     }
    ],
@@ -719,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +803,7 @@
       "\n",
       "_ (174714)\n",
       "language (15162)\n",
-      "university (15135)\n",
+      "university (15147)\n",
       "subject (14113)\n",
       "1 (13936)\n",
       "http (12953)\n",
@@ -746,13 +819,122 @@
       "www (8569)\n",
       "would (8195)\n",
       "10 (8140)\n",
-      "new (8067)\n",
+      "new (8066)\n",
       "please (8060)\n"
      ]
     }
    ],
    "source": [
     "print_most_common_n(d2_neg_counts, 20, \"dfSpam (stopwords removed) - non-Spam emails\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"the\" in d2.NLTK_ENGLISH_STOP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0       \\r\\nSave up to 70% on Life Insurance.\\r\\nWhy S...\n",
+       "2.0       1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...\n",
+       "3.0       1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...\n",
+       "4.0       ##############################################...\n",
+       "5.0       I thought you might like these:\\r\\n1) Slim Dow...\n",
+       "                                ...                        \n",
+       "2601.0    Subject: computationally - intensive methods i...\n",
+       "2602.0    Subject: books : a survey of american linguist...\n",
+       "2603.0    Subject: wecol ' 98 - - western conference on ...\n",
+       "2604.0    Subject: euralex ' 98 - revised programme\\r\\n ...\n",
+       "2605.0    ,Body,Label\\r\\n 0,\"Subject: great part-time or...\n",
+       "Name: Body, Length: 18651, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2.data['Body']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\r\\nSave up to 70% on Life Insurance.\\r\\nWhy Spend More Than You Have To?Life Quote Savings\\r\\nEnsuring your \\r\\n      family's financial security is very important. Life Quote Savings makes \\r\\n      buying life insurance simple and affordable. We Provide FREE Access to The \\r\\n      Very Best Companies and The Lowest Rates.Life Quote Savings is FAST, EASY and \\r\\n            SAVES you money! Let us help you get started with the best values in \\r\\n            the country on new coverage. You can SAVE hundreds or even thousands \\r\\n            of dollars by requesting a FREE quote from Lifequote Savings. Our \\r\\n            service will take you less than 5 minutes to complete. Shop and \\r\\n            compare. SAVE up to 70% on all types of Life insurance! Click Here For Your \\r\\n            Free Quote!Protecting your family is the best investment you'll ever \\r\\n          make!\\r\\nIf you are in receipt of this email \\r\\n      in error and/or wish to be removed from our list, PLEASE CLICK HERE AND TYPE REMOVE. If you \\r\\n      reside in any state which prohibits e-mail solicitations for insurance, \\r\\n      please disregard this \\r\\n      email.\\r\\n\""
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[phrase for phrase in d2.data['Body']][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 most common tokens in dfSpam (stopwords removed) - non-Spam emails:\n",
+      "\n",
+      "_ (174714)\n",
+      "language (15162)\n",
+      "university (15147)\n",
+      "subject (14113)\n",
+      "1 (13936)\n",
+      "http (12953)\n",
+      "enron (12349)\n",
+      "com (11705)\n",
+      "e (11580)\n",
+      "2 (10140)\n",
+      "one (9584)\n",
+      "0 (9432)\n",
+      "00 (9220)\n",
+      "information (9021)\n",
+      "mail (8764)\n",
+      "www (8569)\n",
+      "would (8195)\n",
+      "10 (8140)\n",
+      "new (8066)\n",
+      "please (8060)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_most_common_n(d3.neg_word_counter, 20, \"dfSpam (stopwords removed) - non-Spam emails\")"
    ]
   },
   {
@@ -950,7 +1132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
