Much faster counting, remove stopword test cells

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,13 +576,13 @@
     "    elif l_negative > l_positive:\n",
     "        negative = negative.sample(min_len, random_state=myseed)\n",
     "\n",
-    "    dataset.pos_word_counter = positive['ppBody'].apply(split_doc_and_count).sum()\n",
-    "    dataset.neg_word_counter = negative['ppBody'].apply(split_doc_and_count).sum()"
+    "    dataset.pos_word_counter = positive['ppBody'].str.split().explode().value_counts()\n",
+    "    dataset.neg_word_counter = negative['ppBody'].str.split().explode().value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -826,77 +826,6 @@
    ],
    "source": [
     "print_most_common_n(d2_neg_counts, 20, \"dfSpam (stopwords removed) - non-Spam emails\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"the\" in d2.NLTK_ENGLISH_STOP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0       \\r\\nSave up to 70% on Life Insurance.\\r\\nWhy S...\n",
-       "2.0       1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...\n",
-       "3.0       1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...\n",
-       "4.0       ##############################################...\n",
-       "5.0       I thought you might like these:\\r\\n1) Slim Dow...\n",
-       "                                ...                        \n",
-       "2601.0    Subject: computationally - intensive methods i...\n",
-       "2602.0    Subject: books : a survey of american linguist...\n",
-       "2603.0    Subject: wecol ' 98 - - western conference on ...\n",
-       "2604.0    Subject: euralex ' 98 - revised programme\\r\\n ...\n",
-       "2605.0    ,Body,Label\\r\\n 0,\"Subject: great part-time or...\n",
-       "Name: Body, Length: 18651, dtype: object"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d2.data['Body']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\r\\nSave up to 70% on Life Insurance.\\r\\nWhy Spend More Than You Have To?Life Quote Savings\\r\\nEnsuring your \\r\\n      family's financial security is very important. Life Quote Savings makes \\r\\n      buying life insurance simple and affordable. We Provide FREE Access to The \\r\\n      Very Best Companies and The Lowest Rates.Life Quote Savings is FAST, EASY and \\r\\n            SAVES you money! Let us help you get started with the best values in \\r\\n            the country on new coverage. You can SAVE hundreds or even thousands \\r\\n            of dollars by requesting a FREE quote from Lifequote Savings. Our \\r\\n            service will take you less than 5 minutes to complete. Shop and \\r\\n            compare. SAVE up to 70% on all types of Life insurance! Click Here For Your \\r\\n            Free Quote!Protecting your family is the best investment you'll ever \\r\\n          make!\\r\\nIf you are in receipt of this email \\r\\n      in error and/or wish to be removed from our list, PLEASE CLICK HERE AND TYPE REMOVE. If you \\r\\n      reside in any state which prohibits e-mail solicitations for insurance, \\r\\n      please disregard this \\r\\n      email.\\r\\n\""
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[phrase for phrase in d2.data['Body']][0]"
    ]
   },
   {
