Stoplisting does work, cell needed rerun - counter broken

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,8 @@
     "import itertools\n",
     "from collections import Counter\n",
     "import pickle\n",
-    "import os"
+    "import os\n",
+    "import re"
    ]
   },
   {
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,6 +335,8 @@
     "        if self.preprocessing == []:\n",
     "            #no preprocessing\n",
     "            return phrase\n",
+    "        if \"multi_space\" in self.preprocessing:\n",
+    "            phrase = re.sub(' +', ' ', phrase)\n",
     "        if \"lower\" in self.preprocessing:\n",
     "            #lowercase\n",
     "            phrase = phrase.lower()\n",
@@ -600,11 +603,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "process_dataset(d2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below methods allowed saving and loading the pickled counters, but this is less necessary now that `process_dataset()` is faster - can still be used to save objects"
    ]
   },
   {
@@ -646,10 +657,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_pickle(d.pos_word_counter, 'd-pos.pickle')\n",
-    "save_pickle(d.neg_word_counter, 'd-neg.pickle')\n",
-    "save_pickle(d2.pos_word_counter, 'd2-pos.pickle')\n",
-    "save_pickle(d2.neg_word_counter, 'd2-neg.pickle')"
+    "# save_pickle(d.pos_word_counter, 'd-pos.pickle')\n",
+    "# save_pickle(d.neg_word_counter, 'd-neg.pickle')\n",
+    "# save_pickle(d2.pos_word_counter, 'd2-pos.pickle')\n",
+    "# save_pickle(d2.neg_word_counter, 'd2-neg.pickle')"
    ]
   },
   {
@@ -666,55 +677,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d1_pos_counts = load_pickle('d-pos.pickle')\n",
-    "d1_neg_counts = load_pickle('d-neg.pickle')\n",
-    "d2_pos_counts = load_pickle('d2-pos.pickle')\n",
-    "d2_neg_counts = load_pickle('d2-neg.pickle')"
+    "# d1_pos_counts = load_pickle('d-pos.pickle')\n",
+    "# d1_neg_counts = load_pickle('d-neg.pickle')\n",
+    "# d2_pos_counts = load_pickle('d2-pos.pickle')\n",
+    "# d2_neg_counts = load_pickle('d2-neg.pickle')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\r save up to 70% on life insurance.\\r why spend more than you have to?life quote savings\\r ensuring your \\r       family's financial security is very important. life quote savings makes \\r       buying life insurance simple and affordable. we provide free access to the \\r       very best companies and the lowest rates.life quote savings is fast, easy and \\r             saves you money! let us help you get started with the best values in \\r             the country on new coverage. you can save hundreds or even thousands \\r             of dollars by requesting a free quote from lifequote savings. our \\r             service will take you less than 5 minutes to complete. shop and \\r             compare. save up to 70% on all types of life insurance! click here for your \\r             free quote!protecting your family is the best investment you'll ever \\r           make!\\r if you are in receipt of this email \\r       in error and/or wish to be removed from our list, please click here and type remove. if you \\r       reside in any state which prohibits e-mail solicitations for insurance, \\r       please disregard this \\r       email.\\r\""
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d2.preprocessed_phrases[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'save 70 life insurance spend life quote savings ensuring family financial security important life quote savings makes buying life insurance simple affordable provide free access best companies lowest rates life quote savings fast easy saves money let us help get started best values country new coverage save hundreds even thousands dollars requesting free quote lifequote savings service take less 5 minutes complete shop compare save 70 types life insurance click free quote protecting family best investment ever make receipt email error wish removed list please click type remove reside state prohibits e mail solicitations insurance please disregard email'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d2.features[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,21 +694,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "process_dataset(d3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_pickle(d3.pos_word_counter, 'd3-pos.pickle')\n",
-    "save_pickle(d3.neg_word_counter, 'd3-neg.pickle')"
    ]
   },
   {
@@ -787,7 +748,7 @@
     }
    ],
    "source": [
-    "print_most_common_n(d1_pos_counts, 5, \"dfSpam (with stopwords) - Spam emails\")"
+    "print_most_common_n(d.pos_word_counter, 5, \"dfSpam (with stopwords) - Spam emails\")"
    ]
   },
   {
@@ -825,12 +786,12 @@
     }
    ],
    "source": [
-    "print_most_common_n(d2_neg_counts, 20, \"dfSpam (stopwords removed) - non-Spam emails\")"
+    "print_most_common_n(d2.neg_word_counter, 20, \"dfSpam (stopwords removed) - non-Spam emails\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -838,32 +799,116 @@
      "output_type": "stream",
      "text": [
       "20 most common tokens in dfSpam (stopwords removed) - non-Spam emails:\n",
-      "\n",
-      "_ (174714)\n",
-      "language (15162)\n",
-      "university (15147)\n",
-      "subject (14113)\n",
-      "1 (13936)\n",
-      "http (12953)\n",
-      "enron (12349)\n",
-      "com (11705)\n",
-      "e (11580)\n",
-      "2 (10140)\n",
-      "one (9584)\n",
-      "0 (9432)\n",
-      "00 (9220)\n",
-      "information (9021)\n",
-      "mail (8764)\n",
-      "www (8569)\n",
-      "would (8195)\n",
-      "10 (8140)\n",
-      "new (8066)\n",
-      "please (8060)\n"
+      "\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'most_common'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 38\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m print_most_common_n(d3\u001b[39m.\u001b[39;49mneg_word_counter, \u001b[39m20\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mdfSpam (stopwords removed) - non-Spam emails\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 38\u001b[0m in \u001b[0;36mprint_most_common_n\u001b[1;34m(counter, n, name)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mprint_most_common_n\u001b[39m(counter, n, name):\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mn\u001b[39m}\u001b[39;00m\u001b[39m most common tokens in \u001b[39m\u001b[39m{\u001b[39;00mname\u001b[39m}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     most_common \u001b[39m=\u001b[39m counter\u001b[39m.\u001b[39;49mmost_common(n)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m<\u001b[39m \u001b[39m6\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y161sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         output \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin([\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\\"\u001b[39;00m\u001b[39m{\u001b[39;00mword\u001b[39m}\u001b[39;00m\u001b[39m\\\"\u001b[39;00m\u001b[39m (\u001b[39m\u001b[39m{\u001b[39;00mcount\u001b[39m}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mfor\u001b[39;00m (word, count) \u001b[39min\u001b[39;00m most_common])\n",
+      "File \u001b[1;32mc:\\Users\\theco\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\generic.py:5902\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5895\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   5896\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[0;32m   5897\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[0;32m   5898\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[0;32m   5899\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   5900\u001b[0m ):\n\u001b[0;32m   5901\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[1;32m-> 5902\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'most_common'"
      ]
     }
    ],
    "source": [
     "print_most_common_n(d3.neg_word_counter, 20, \"dfSpam (stopwords removed) - non-Spam emails\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "e    2122314\n",
+       "i    1415227\n",
+       "a    1406244\n",
+       "n    1334537\n",
+       "s    1325645\n",
+       "t    1281843\n",
+       "r    1223865\n",
+       "o    1143616\n",
+       "l     894582\n",
+       "c     787918\n",
+       "d     598144\n",
+       "u     587289\n",
+       "p     539334\n",
+       "m     536085\n",
+       "g     473977\n",
+       "h     377746\n",
+       "y     277204\n",
+       "f     249569\n",
+       "b     245626\n",
+       "w     212859\n",
+       "v     212703\n",
+       "k     174667\n",
+       "0      86195\n",
+       "x      72221\n",
+       "1      66542\n",
+       "j      60226\n",
+       "9      55213\n",
+       "2      47821\n",
+       "_      45904\n",
+       "q      32064\n",
+       "5      29975\n",
+       "8      29480\n",
+       "z      29289\n",
+       "3      29017\n",
+       "4      24299\n",
+       "7      23104\n",
+       "6      22820\n",
+       "â        708\n",
+       "ã        225\n",
+       "ï         78\n",
+       "½         58\n",
+       "¼         44\n",
+       "œ         42\n",
+       "º          9\n",
+       "²          8\n",
+       "³          6\n",
+       "ÿ          5\n",
+       "ª          3\n",
+       "¹          1\n",
+       "š          1\n",
+       "ˆ          1\n",
+       "Name: ppBody, dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d3.neg_word_counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(d3.neg_word_counter)"
    ]
   },
   {
