--- a/classif.ipynb
+++ b/classif.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,17 +579,101 @@
     "    elif l_negative > l_positive:\n",
     "        negative = negative.sample(min_len, random_state=myseed)\n",
     "\n",
-    "    dataset.pos_word_counter = positive['ppBody'].str.split().explode().value_counts()\n",
-    "    dataset.neg_word_counter = negative['ppBody'].str.split().explode().value_counts()"
+    "    dataset.pos_word_counter = positive['ppBody'].str.explode().value_counts()\n",
+    "    dataset.neg_word_counter = negative['ppBody'].str.explode().value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
+    "positive = d3.pp_df[d3.pp_df['label'] == \"1\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0      [s, a, v, e, l, i, f, e, i, n, s, u, r, a, n, ...\n",
+       "2.0      [f, i, g, h, t, r, i, s, k, c, a, n, c, e, r, ...\n",
+       "3.0      [f, i, g, h, t, r, i, s, k, c, a, n, c, e, r, ...\n",
+       "4.0      [a, d, u, l, t, c, l, u, b, o, f, f, e, r, s, ...\n",
+       "5.0      [t, h, o, u, g, h, t, m, i, g, h, t, l, i, k, ...\n",
+       "                               ...                        \n",
+       "429.0    [s, u, b, j, e, c, t, l, u, c, k, y, c, o, n, ...\n",
+       "430.0    [s, u, b, j, e, c, t, n, e, w, c, a, p, i, t, ...\n",
+       "431.0    [s, u, b, j, e, c, t, s, u, b, m, i, t, 6, 0, ...\n",
+       "432.0    [s, u, b, j, e, c, t, s, u, b, m, i, t, 6, 0, ...\n",
+       "433.0    [s, u, b, j, e, c, t, s, t, a, n, d, d, e, a, ...\n",
+       "Name: ppBody, Length: 7328, dtype: object"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positive['ppBody'].str.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'StringMethods' object has no attribute 'explode'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 24\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m process_dataset(d)\n",
+      "\u001b[1;32md:\\Documents\\Phishing-ML\\classif.ipynb Cell 24\u001b[0m in \u001b[0;36mprocess_dataset\u001b[1;34m(dataset)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39melif\u001b[39;00m l_negative \u001b[39m>\u001b[39m l_positive:\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     negative \u001b[39m=\u001b[39m negative\u001b[39m.\u001b[39msample(min_len, random_state\u001b[39m=\u001b[39mmyseed)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m dataset\u001b[39m.\u001b[39mpos_word_counter \u001b[39m=\u001b[39m positive[\u001b[39m'\u001b[39;49m\u001b[39mppBody\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mstr\u001b[39m.\u001b[39;49mexplode()\u001b[39m.\u001b[39mvalue_counts()\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Documents/Phishing-ML/classif.ipynb#Y115sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m dataset\u001b[39m.\u001b[39mneg_word_counter \u001b[39m=\u001b[39m negative[\u001b[39m'\u001b[39m\u001b[39mppBody\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mexplode()\u001b[39m.\u001b[39mvalue_counts()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'StringMethods' object has no attribute 'explode'"
+     ]
+    }
+   ],
+   "source": [
     "process_dataset(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0      s a v e l i f e i n s u r a n c e s p e n d l ...\n",
+       "2.0      f i g h t r i s k c a n c e r h t t p w w w a ...\n",
+       "3.0      f i g h t r i s k c a n c e r h t t p w w w a ...\n",
+       "4.0      a d u l t c l u b o f f e r s f r e e m e m b ...\n",
+       "5.0      t h o u g h t m i g h t l i k e s l i m g u a ...\n",
+       "                               ...                        \n",
+       "429.0    s u b j e c t l u c k y c o n g r a t u l a t ...\n",
+       "430.0    s u b j e c t n e w c a p i t a l f m c o m n ...\n",
+       "431.0    s u b j e c t s u b m i t 6 0 0 s p a m r e c ...\n",
+       "432.0    s u b j e c t s u b m i t 6 0 0 s p a m r e c ...\n",
+       "433.0    s u b j e c t s t a n d d e a r i n t e r n e ...\n",
+       "Name: ppBody, Length: 7328, dtype: object"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positive['ppBody']"
    ]
   },
   {
